Prepare v0.3.0 with Lamdera support for npm release
- Update package name to elm-json-lamdera
- Point to CharlonTank/elm-json releases
- Bump version to 0.3.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "elm-json"
-version = "0.2.13"
-authors = ["ilias <mail@ilias.xyz>"]
+version = "0.3.0"
+authors = ["ilias <mail@ilias.xyz>", "Charles-André Sus"]
 edition = "2021"
 
 [dependencies]
