Use macos-latest for faster CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,11 +83,11 @@ jobs:
             target: x86_64-unknown-linux-musl
             ext: ""
           - name: OSX (intel)
-            os: macos-11
+            os: macos-latest
             target: x86_64-apple-darwin
             ext: ""
           - name: OSX (arm)
-            os: macos-11
+            os: macos-latest
             target: aarch64-apple-darwin
             ext: ""
           - name: Windows
